--- a/receiver-test.html
+++ b/receiver-test.html
@@ -38,6 +38,21 @@ Cast.
 
       const context = cast.framework.CastReceiverContext.getInstance();
       const playerManager = context.getPlayerManager();
+	  
+	  // Event listener for MEDIA_STATUS
+	  cast.framework.CastReceiverContext.getInstance().addEventListener(
+		cast.framework.events.EventType.MEDIA_STATUS,
+		(event) => {
+			// Check if mediaStatus is present
+			if (event.mediaStatus) {
+				// Modify the elapsed time (in seconds)
+				const modifiedElapsedTime = 10; // Set your desired elapsed time
+
+				// Update mediaStatus with the modified elapsed time
+				event.mediaStatus.currentTime = modifiedElapsedTime;
+			}
+		}
+	  );
 
       // helper : query elements even deeply within shadow doms
       function querySelectorDeep(selector, root = document) {
@@ -89,7 +104,7 @@ Cast.
           console.warn("updateMetadata error", err)
         }
       }
-        
+	       
       // Sender GET_PLAY request
       playerManager.setMessageInterceptor(
         cast.framework.messages.MessageType.PLAY, data => {
