--- a/receiver-test.html
+++ b/receiver-test.html
@@ -39,21 +39,6 @@ Cast.
       const context = cast.framework.CastReceiverContext.getInstance();
       const playerManager = context.getPlayerManager();
 	  
-	  // Event listener for MEDIA_STATUS
-	  cast.framework.CastReceiverContext.getInstance().addEventListener(
-		cast.framework.events.EventType.MEDIA_STATUS,
-		(event) => {
-			// Check if mediaStatus is present
-			if (event.mediaStatus) {
-				// Modify the elapsed time (in seconds)
-				const modifiedElapsedTime = 10; // Set your desired elapsed time
-
-				// Update mediaStatus with the modified elapsed time
-				event.mediaStatus.currentTime = modifiedElapsedTime;
-			}
-		}
-	  );
-
       // helper : query elements even deeply within shadow doms
       function querySelectorDeep(selector, root = document) {
         let currentRoot = root;
@@ -128,6 +113,21 @@ Cast.
       )
         
       context.start();
+	  
+  	  // Event listener for MEDIA_STATUS
+	  context.addEventListener(
+		cast.framework.events.EventType.MEDIA_STATUS,
+		(event) => {
+			// Check if mediaStatus is present
+			if (event.mediaStatus) {
+				// Modify the elapsed time (in seconds)
+				const modifiedElapsedTime = 10; // Set your desired elapsed time
+
+				// Update mediaStatus with the modified elapsed time
+				event.mediaStatus.currentTime = modifiedElapsedTime;
+			}
+		}
+	  );
 
     </script>
   </footer>
