--- a/receiver-test.html
+++ b/receiver-test.html
@@ -111,8 +111,25 @@ Cast.
           return data
         }
       )
+	  
+   	  // Event listener for MEDIA_STATUS
+	  //context.addEventListener(
+	  playerManager.addEventListener(
+		cast.framework.events.EventType.MEDIA_STATUS,
+		(event) => {
+			// Check if mediaStatus is present
+			if (event.mediaStatus) {
+				// Modify the elapsed time (in seconds)
+				const modifiedElapsedTime = 10; // Set your desired elapsed time
+
+				// Update mediaStatus with the modified elapsed time
+				event.mediaStatus.currentTime = modifiedElapsedTime;
+			}
+		}
+	  );
         
       context.start();
+	  
 
     </script>
   </footer>
