--- a/receiver-test.html
+++ b/receiver-test.html
@@ -84,7 +84,7 @@ Cast.
           // retrieve current media information
           const mediaInformation = playerManager.getMediaInformation()
           // update its metadata
-          if (customData.metadata) mediaInformation.metadata = customData.metaData
+          if (customData.metadata) mediaInformation.metadata = customData.metadata
 		  castDebugLogger.debug(TAG, 'YEP');
 		  if (customData.live_duration) {
 			castDebugLogger.debug(TAG, 'YEP-2');
